--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "jest": "^29.7.0",
+    "postcode": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web-vitals": "^3.1.0"
@@ -19,7 +21,9 @@
     "start": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
   },
   "eslintConfig": {
     "extends": [
@@ -41,8 +45,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.1",
+    "gh-pages": "^6.2.0",
     "jsdom": "^22.1.0",
     "vite": "^4.5.5",
     "vitest": "^0.34.6"
-  }
+  },
+  "homepage": "https://<aiidanm>.github.io/<SoundPoundMatcher>",
 }
