More package.json changes for github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://<aiidanm>.github.io/<SoundPoundMatcher>",
+  "homepage": "https://aiidanm.github.io/SoundPoundMatcher",
   "name": "codespaces-react",
   "version": "0.1.0",
   "private": true,
