--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "postcode": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.3.0",
+    "react-router-dom": "^7.3.0",
     "web-vitals": "^3.1.0"
   },
   "overrides": {
