--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "web-vitals": "^3.1.0"
   },
   "overrides": {
